# hews

./: .gitignore  CODESTYLE.md  CONTRIBUTING.md  HEALTHCHECK.md  Makefile  README.md  pyproject.toml  pytest.ini
.shux/scripts/: fake_hn_tui.py  run-fake-tui-search.sh  run-fake-tui-top.sh  visual-smoke.sh
docs/: hews-prd-v1.1.0.md  ui-ux-guidelines.md
src/hews/: __init__.py  cache.py  cli.py  client.py  hews.tcss  tui.py
src/hews/models/: __init__.py
src/logger_setup/: __init__.py
tests/: test_cache.py  test_cli.py  test_client.py  test_clock_injection.py  test_models.py  test_tui.py
